--- a/package.json
+++ b/package.json
@@ -2,7 +2,37 @@
   "name": "logux.io",
   "private": true,
   "scripts": {
-    "uikit": "parcel serve src/uikit.pug --open"
+    "uikit": "parcel serve src/uikit.pug --open",
+    "lint": "eslint . && stylelint src/**/*.sss",
+    "test": "yarn lint",
+    "clean": "rimraf dist/ .cache"
+  },
+  "devDependencies": {
+    "@logux/eslint-config": "^32.2.0",
+    "@logux/sharec-config": "^0.5.2",
+    "eslint": "^6.5.1",
+    "eslint-config-standard": "^14.1.0",
+    "eslint-plugin-es5": "^1.4.1",
+    "eslint-plugin-import": "^2.18.2",
+    "eslint-plugin-jest": "^22.17.0",
+    "eslint-plugin-node": "^10.0.0",
+    "eslint-plugin-prefer-let": "^1.0.1",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-security": "^1.4.0",
+    "eslint-plugin-standard": "^4.0.1",
+    "eslint-plugin-unicorn": "^12.0.1",
+    "husky": "^3.0.8",
+    "lint-staged": "^9.4.1",
+    "parcel-bundler": "^1.12.3",
+    "postcss-hexrgba": "^1.0.2",
+    "postcss-media-minmax": "^4.0.0",
+    "postcss-nested": "^4.1.2",
+    "pug": "^2.0.4",
+    "stylelint": "^11.0.0",
+    "stylelint-config-recess-order": "^2.0.3",
+    "stylelint-config-standard": "^19.0.0",
+    "stylelint-order": "^3.1.1",
+    "sugarss": "^2.0.0"
   },
   "browserslist": [
     "defaults"
@@ -14,12 +44,35 @@
       "postcss-hexrgba": {}
     }
   },
-  "devDependencies": {
-    "parcel-bundler": "^1.12.3",
-    "postcss-hexrgba": "^1.0.2",
-    "postcss-media-minmax": "^4.0.0",
-    "postcss-nested": "^4.1.2",
-    "pug": "^2.0.4",
-    "sugarss": "^2.0.0"
+  "eslintConfig": {
+    "extends": "@logux/eslint-config/node"
+  },
+  "eslintIgnore": [
+    "node_modules",
+    "dist",
+    ".cache"
+  ],
+  "stylelint": {
+    "extends": [
+      "stylelint-config-standard",
+      "stylelint-config-recess-order"
+    ],
+    "rules": {
+      "declaration-block-trailing-semicolon": null,
+      "block-closing-brace-newline-before": null,
+      "block-opening-brace-space-before": null
+    }
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "*.js": "eslint",
+    "*.css": [
+      "stylelint --fix",
+      "git add"
+    ]
   }
 }
