--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "stylelint-config-recess-order": "^2.0.3",
     "stylelint-config-standard": "^19.0.0",
     "stylelint-order": "^3.1.1",
-    "sugarss": "^2.0.0"
+    "sugarss": "^2.0.0",
+    "svgo": "^1.3.0"
   },
   "browserslist": [
     "defaults"
@@ -70,6 +71,7 @@
   },
   "lint-staged": {
     "*.js": "eslint",
+    "*.svg": "svgo",
     "*.css": [
       "stylelint --fix",
       "git add"
