--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "devDependencies": {
     "@logux/eslint-config": "^32.2.0",
-    "@logux/sharec-config": "^0.5.2",
+    "@logux/sharec-config": "^0.5.3",
     "eslint": "^6.5.1",
     "eslint-config-standard": "^14.1.0",
     "eslint-plugin-es5": "^1.4.1",
@@ -20,10 +20,10 @@
     "eslint-plugin-promise": "^4.2.1",
     "eslint-plugin-security": "^1.4.0",
     "eslint-plugin-standard": "^4.0.1",
-    "eslint-plugin-unicorn": "^12.0.1",
+    "eslint-plugin-unicorn": "^12.0.2",
     "husky": "^3.0.8",
     "lint-staged": "^9.4.1",
-    "parcel-bundler": "^1.12.3",
+    "parcel-bundler": "^1.12.4",
     "postcss-hexrgba": "^1.0.2",
     "postcss-media-minmax": "^4.0.0",
     "postcss-nested": "^4.1.2",
@@ -87,5 +87,9 @@
       "stylelint --fix",
       "git add"
     ]
+  },
+  "sharec": {
+    "config": "@logux/sharec-config",
+    "version": "0.5.3"
   }
 }
