--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "logux.io",
   "private": true,
   "scripts": {
-    "securitytxt:sign": "gpg --digest-algo SHA512 --clearsign src/base/.well-known/security.txt",
+    "securitytxt:sign": "gpg --digest-algo SHA512 --clearsign src/well-known/security.txt",
     "uikit": "parcel serve src/uikit.pug --open",
     "lint": "eslint . && stylelint src/**/*.sss",
     "test": "yarn lint",
-    "clean": "rimraf dist/ .cache"
+    "clean": "rimraf dist/ .cache",
+    "build": "rimraf dist/ && NODE_ENV=production ./build"
   },
   "devDependencies": {
     "@logux/eslint-config": "^32.2.0",
@@ -55,7 +56,10 @@
     }
   },
   "eslintConfig": {
-    "extends": "@logux/eslint-config/node"
+    "extends": "@logux/eslint-config/node",
+    "rules": {
+      "node/no-unpublished-require": "off"
+    }
   },
   "eslintIgnore": [
     "node_modules",
