Test project on Travis CI

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "securitytxt:sign": "gpg --digest-algo SHA512 --clearsign src/well-known/security.txt",
     "uikit": "parcel serve src/uikit.pug --open",
     "lint": "eslint . && stylelint src/**/*.sss",
-    "test": "yarn lint",
+    "test": "yarn lint && yarn build",
     "clean": "rimraf dist/ .cache",
     "build": "rimraf dist/ && NODE_ENV=production ./build"
   },
