--- a/package.json
+++ b/package.json
@@ -48,6 +48,9 @@
     "not and_qq > 0",
     "not android > 0"
   ],
+  "engines": {
+    "node": "^12.0.0"
+  },
   "postcss": {
     "plugins": {
       "postcss-media-minmax": {},
