--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
     "eslint-plugin-unicorn": "^12.0.2",
     "husky": "^3.0.8",
     "lint-staged": "^9.4.2",
+    "make-dir": "^3.0.0",
     "parcel-bundler": "^1.12.4",
     "postcss-hexrgba": "^1.0.2",
     "postcss-media-minmax": "^4.0.0",
     "postcss-nested": "^4.1.2",
+    "posthtml": "^0.11.6",
     "pug": "^2.0.4",
     "stylelint": "^11.0.0",
     "stylelint-config-recess-order": "^2.0.3",
