Fix webmanifest MIME type and caching

--- a/nginx.conf
+++ b/nginx.conf
@@ -12,6 +12,9 @@ http {
   server_tokens off;
 
   include mime.types;
+  types {
+    application/manifest+json webmanifest;
+  }
   default_type application/octet-stream;
   sendfile on;
 
@@ -29,7 +32,7 @@ http {
       return 301 $scheme://$domain$request_uri;
     }
 
-    location ~* "(\.js|\.css|\.png)$" {
+    location ~* "(\.js|\.css|\.png|\.webmanifest)$" {
       add_header Cache-Control "public, max-age=31536000, immutable";
     }
 
