--- a/nginx.conf
+++ b/nginx.conf
@@ -32,11 +32,11 @@ http {
       return 301 $scheme://$domain$request_uri;
     }
 
-    location ~* "(\.js|\.css|\.png|\.webmanifest)$" {
+    location ~* "(\.js|\.css|\.png|\.woff2|\.webmanifest)$" {
       add_header Cache-Control "public, max-age=31536000, immutable";
     }
 
-    location ~* "(\.png|\.ico)$" {
+    location ~* "(\.png|\.ico|\.woff2)$" {
       add_header Content-Security-Policy "";
     }
   }
