Add charset for manifest and CSS

--- a/nginx.conf
+++ b/nginx.conf
@@ -16,6 +16,7 @@ http {
     application/manifest+json webmanifest;
   }
   default_type application/octet-stream;
+  charset_types text/html text/css application/manifest+json;
   sendfile on;
 
   server {
