Fix trailing slash redirect adding unnecessary port

--- a/nginx.conf
+++ b/nginx.conf
@@ -16,7 +16,7 @@ http {
     application/manifest+json webmanifest;
   }
   default_type application/octet-stream;
-  charset_types text/html text/css application/manifest+json;
+  charset_types text/css application/manifest+json;
   sendfile on;
 
   server {
@@ -31,6 +31,11 @@ http {
 
     if ($host ~ ^www\.(?<domain>.+)$) {
       return 301 $scheme://$domain$request_uri;
+    }
+
+    rewrite ^(|/(.*))/index\.html$ /$2 permanent;
+    if (-d $request_filename) {
+      rewrite [^/]$ $scheme://$http_host$uri/ permanent;
     }
 
     location ~* "(\.js|\.css|\.png|\.woff2|\.webmanifest)$" {
