Speed up redirects

--- a/nginx.conf
+++ b/nginx.conf
@@ -30,11 +30,11 @@ http {
     add_header Content-Security-Policy "object-src 'none'; frame-ancestors 'none'; form-action 'none'; base-uri 'none'; style-src 'self'; script-src 'self'";
 
     if ($host ~ ^www\.(?<domain>.+)$) {
-      return 301 $scheme://$domain$request_uri;
+      return 301 https://$domain$request_uri;
     }
 
     if (-d $request_filename) {
-      rewrite [^/]$ $scheme://$http_host$uri/ permanent;
+      rewrite [^/]$ https://$http_host$uri/ permanent;
     }
 
     location ~* "(\.js|\.css|\.png|\.woff2|\.webmanifest)$" {
