Add charset to JS files

--- a/nginx.conf
+++ b/nginx.conf
@@ -16,7 +16,7 @@ http {
     application/manifest+json webmanifest;
   }
   default_type application/octet-stream;
-  charset_types text/css application/manifest+json;
+  charset_types application/javascript text/css application/manifest+json;
   sendfile on;
 
   server {
