Set public cache for all content

--- a/nginx.conf
+++ b/nginx.conf
@@ -37,6 +37,8 @@ http {
       rewrite [^/]$ https://$http_host$uri/ permanent;
     }
 
+    add_header Cache-Control "public";
+
     location ~* "(\.js|\.css|\.png|\.woff2|\.webmanifest)$" {
       add_header Cache-Control "public, max-age=31536000, immutable";
     }
