--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -7,6 +7,7 @@ steps:
     entrypoint: yarn
     args:
       - build
+      - --production
   - name: 'gcr.io/cloud-builders/docker'
     args:
       -- build
