--- a/package.json
+++ b/package.json
@@ -12,6 +12,17 @@
     "nginx:shell": "podman run --rm -i $(buildah bud .) sh",
     "deploy": "gcloud builds --project logux-255417 submit"
   },
+  "dependencies": {
+    "make-dir": "^3.0.0",
+    "parcel-bundler": "^1.12.4",
+    "postcss-hexrgba": "^1.0.2",
+    "postcss-media-minmax": "^4.0.0",
+    "postcss-nested": "^4.1.2",
+    "posthtml": "^0.12.0",
+    "pug": "^2.0.4",
+    "rimraf": "^3.0.0",
+    "sugarss": "^2.0.0"
+  },
   "devDependencies": {
     "@logux/eslint-config": "^32.2.0",
     "@logux/sharec-config": "^0.5.3",
@@ -28,18 +39,10 @@
     "eslint-plugin-unicorn": "^12.1.0",
     "husky": "^3.0.8",
     "lint-staged": "^9.4.2",
-    "make-dir": "^3.0.0",
-    "parcel-bundler": "^1.12.4",
-    "postcss-hexrgba": "^1.0.2",
-    "postcss-media-minmax": "^4.0.0",
-    "postcss-nested": "^4.1.2",
-    "posthtml": "^0.12.0",
-    "pug": "^2.0.4",
     "stylelint": "^11.1.1",
     "stylelint-config-recess-order": "^2.0.3",
     "stylelint-config-standard": "^19.0.0",
     "stylelint-order": "^3.1.1",
-    "sugarss": "^2.0.0",
     "svgo": "^1.3.0"
   },
   "browserslist": [
