--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
     "secrets:decrypt": "gcloud kms --project logux-255417 decrypt --plaintext-file=secrets.json --ciphertext-file=secrets.json.enc --location=global --keyring=secrets --key=password",
     "securitytxt:sign": "gpg --digest-algo SHA512 --clearsign src/well-known/security.txt",
     "start": "parcel serve src/uikit.pug --open",
-    "lint": "eslint . && stylelint src/**/*.sss",
+    "lint": "eslint . scripts/* && stylelint src/**/*.sss",
     "test": "yarn lint && yarn build",
     "clean": "rimraf dist/ .cache",
-    "build": "rimraf dist/ && NODE_ENV=production ./build",
+    "build": "rimraf dist/ && NODE_ENV=production ./scripts/build",
     "nginx": "podman run --rm -p 8000:80 -e PORT=80 $(buildah bud .)",
     "nginx:shell": "podman run --rm -i $(buildah bud .) sh",
     "deploy": "gcloud builds --project logux-255417 submit"
