--- a/nginx.conf
+++ b/nginx.conf
@@ -40,6 +40,7 @@ http {
     add_header Cache-Control "public";
 
     location ~* "(\.js|\.css|\.png|\.woff2|\.webmanifest)$" {
+      add_header X-Content-Type-Options "nosniff";
       add_header Cache-Control "public, max-age=31536000, immutable";
     }
 
