--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "parcel-bundler": "^1.12.4",
     "postcss-hexrgba": "^1.0.2",
     "postcss-media-minmax": "^4.0.0",
+    "postcss-mixins": "^6.2.2",
     "postcss-nested": "^4.1.2",
     "posthtml": "^0.12.0",
     "pug": "^2.0.4",
@@ -62,6 +63,9 @@
   },
   "postcss": {
     "plugins": {
+      "postcss-mixins": {
+        "mixinsDir": "mixins"
+      },
       "postcss-media-minmax": {},
       "postcss-nested": {},
       "postcss-hexrgba": {}
@@ -86,7 +90,13 @@
     "rules": {
       "declaration-block-trailing-semicolon": null,
       "block-closing-brace-newline-before": null,
-      "block-opening-brace-space-before": null
+      "block-opening-brace-space-before": null,
+      "at-rule-no-unknown": [true, {
+        "ignoreAtRules": [
+          "define-mixin",
+          "mixin"
+        ]
+      }]
     }
   },
   "husky": {
