--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
   "dependencies": {
     "make-dir": "^3.0.0",
     "parcel-bundler": "^1.12.4",
+    "postcss": "^7.0.18",
     "postcss-dark-theme-class": "^0.2.2",
     "postcss-hexrgba": "^1.0.2",
     "postcss-media-minmax": "^4.0.0",
     "postcss-mixins": "^6.2.2",
     "postcss-momentum-scrolling": "^1.9.15",
     "postcss-nested": "^4.1.2",
+    "postcss-url": "^8.0.0",
     "posthtml": "^0.12.0",
     "pug": "^2.0.4",
     "rimraf": "^3.0.0",
