Add gzip compression

--- a/nginx.conf
+++ b/nginx.conf
@@ -24,6 +24,7 @@ http {
 
     root /var/www;
     charset UTF-8;
+    gzip_static on;
 
     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload";
     add_header X-Content-Type-Options "nosniff";
