--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "not android > 0"
   ],
   "engines": {
-    "node": "^12.0.0"
+    "node": ">=12.0.0"
   },
   "postcss": {
     "plugins": {
