--- a/nginx.conf
+++ b/nginx.conf
@@ -28,7 +28,7 @@ http {
 
     add_header Strict-Transport-Security "max-age=31536000; includeSubDomains; preload";
     add_header X-Content-Type-Options "nosniff";
-    add_header Content-Security-Policy "object-src 'none'; frame-ancestors 'none'; form-action 'none'; base-uri 'none'; style-src 'self' *.gitter.im; script-src 'self' *.gitter.im";
+    add_header Content-Security-Policy "object-src 'none'; frame-ancestors 'none'; form-action 'none'; base-uri 'none'; style-src 'unsafe-inline' 'self' *.gitter.im; script-src 'self' *.gitter.im";
 
     if ($host ~ ^www\.(?<domain>.+)$) {
       return 301 https://$domain$request_uri;
