--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "stylelint-order": "^3.1.1",
     "svgo": "^1.3.2"
   },
+  "license": "MIT",
   "browserslist": [
     "last 2 versions",
     "firefox esr",
