--- a/nginx.conf
+++ b/nginx.conf
@@ -16,7 +16,7 @@ http {
     application/manifest+json webmanifest;
   }
   default_type application/octet-stream;
-  charset_types application/javascript text/css application/manifest+json;
+  charset_types application/javascript text/css application/manifest+json image/svg+xml;
   sendfile on;
 
   server {
@@ -40,7 +40,7 @@ http {
 
     add_header Cache-Control "public";
 
-    location ~* "(\.js|\.css|\.png|\.woff2|\.webmanifest)$" {
+    location ~* "(\.js|\.css|\.png|\.svg|\.woff2|\.webmanifest)$" {
       add_header X-Content-Type-Options "nosniff";
       add_header Cache-Control "public, max-age=31536000, immutable";
     }
