Split build script

--- a/scripts/build
+++ b/scripts/build
@@ -1,144 +1,11 @@
 #!/usr/bin/env node
 
-let { writeFile, readFile, copyFile, unlink } = require('fs').promises
-let { basename, join, extname } = require('path')
-let { promisify } = require('util')
-let postcssUrl = require('postcss-url')
-let posthtml = require('posthtml')
-let makeDir = require('make-dir')
-let Bundler = require('parcel-bundler')
-let postcss = require('postcss')
-let crypto = require('crypto')
-let zlib = require('zlib')
-
-let gzip = promisify(zlib.gzip)
-
-const SRC = join(__dirname, '..', 'src')
-const DIST = join(__dirname, '..', 'dist')
-
-const PRELOAD_TYPES = {
-  '.woff2': 'font',
-  '.svg': 'image'
-}
-
-async function compileAssets () {
-  let uikitBundler = new Bundler(join(SRC, 'uikit.pug'), {
-    sourceMaps: false
-  })
-  let bundle = await uikitBundler.bundle()
-  function findAssets (step) {
-    return Array.from(step.childBundles).reduce((all, i) => {
-      return all.concat(findAssets(i))
-    }, [step.name])
-  }
-  let assets = findAssets(bundle)
-  return {
-    get (regexp) {
-      return assets.filter(i => regexp.test(i))
-    },
-    find (regexp) {
-      return assets.find(i => regexp.test(i))
-    },
-    remove (path) {
-      assets = assets.filter(i => i !== path)
-    },
-    add (path) {
-      assets = assets.concat([path])
-    }
-  }
-}
-
-async function copyWellKnown (assets) {
-  let wellFrom = join(SRC, 'well-known')
-  let wellTo = join(DIST, '.well-known')
-  let files = ['favicon.ico', 'robots.txt']
-  await makeDir(join(DIST, '.well-known'))
-  await Promise.all(files
-    .map(i => copyFile(join(wellFrom, i), join(DIST, i)))
-    .concat([
-      copyFile(join(wellFrom, 'security.txt.asc'), join(wellTo, 'security.txt'))
-    ]))
-  for (let file of files) assets.add(join(DIST, file))
-  assets.add(join(wellTo, 'security.txt'))
-}
-
-async function generateWebManifest (assets) {
-  let json = JSON.parse(
-    await readFile(join(SRC, 'base', 'manifest.webmanifest'))
-  )
-  json.icons[0].src = '/' + basename(assets.find(/196\..*\.png$/))
-  json.icons[1].src = '/' + basename(assets.find(/512\..*\.png$/))
-  let text = JSON.stringify(json)
-  let hash = crypto.createHash('md5').update(text).digest('hex').slice(0, 8)
-  let name = `manifest.${ hash }.webmanifest`
-  await writeFile(join(DIST, name), text)
-  assets.add(join(DIST, name))
-  return { url: '/' + name, theme: json.theme_color }
-}
-
-async function findFilesInCSS (assets) {
-  let collected = []
-  let fileCollector = postcssUrl({
-    url ({ url }, dir, ops, decl) {
-      let media = decl.parent.parent
-      if (media && media.name === 'media') {
-        collected.push([media.params, url])
-      } else {
-        collected.push([undefined, url])
-      }
-      return url
-    }
-  })
-  await Promise.all(assets.get(/\.css$/).map(async file => {
-    let css = await readFile(file)
-    await postcss([fileCollector]).process(css, { from: file })
-  }))
-  return collected
-}
-
-async function updateHtml (assets, manifest, preloadFiles) {
-  let [html] = await Promise.all([
-    readFile(join(DIST, 'uikit.html')),
-    makeDir(join(DIST, 'uikit'))
-  ])
-  function htmlPlugin (tree) {
-    tree.match({ attrs: { rel: 'icon', sizes: '512x512' } }, () => {
-      return [
-        { tag: 'link', attrs: { rel: 'manifest', href: manifest.url } },
-        { tag: 'meta', attrs: { name: 'theme-color', content: manifest.theme } }
-      ].concat(preloadFiles.map(([media, url]) => {
-        let as = PRELOAD_TYPES[extname(url)]
-        if (!as) throw new Error('Unknown type ' + extname(url))
-        return {
-          tag: 'link',
-          attrs: {
-            rel: 'preload', href: url, as, media, crossorigin: as === 'font'
-          }
-        }
-      }))
-    })
-  }
-  let fixed = posthtml().use(htmlPlugin).process(html, { sync: true }).html
-  let oldFile = join(DIST, 'uikit.html')
-  let newFile = join(DIST, 'uikit', 'index.html')
-  await Promise.all([
-    writeFile(newFile, fixed),
-    unlink(oldFile)
-  ])
-  assets.remove(oldFile)
-  assets.add(newFile)
-}
-
-async function compressAssets (assets) {
-  await Promise.all(assets
-    .get(/\.(js|css|ico|html|webmanifest|svg|txt)$/)
-    .map(async path => {
-      let content = await readFile(path)
-      let compressed = await gzip(content, { level: 9 })
-      await writeFile(path + '.gz', compressed)
-    })
-  )
-}
+let generateWebManifest = require('./steps/generate-web-manifest')
+let findFilesInCSS = require('./steps/find-files-in-css')
+let compressAssets = require('./steps/compress-assets')
+let copyWellKnown = require('./steps/copy-well-known')
+let compileAssets = require('./steps/compile-assets')
+let updateHtml = require('./steps/update-html')
 
 async function build () {
   let assets = await compileAssets()
